# generic

./: .gitignore  Makefile  README.md  README.org  _config.yml  generic.ml  generic.ml.dep  generic.opam  generic_core.ml  generic_core.ml.dep  generic_core_antiunify.ml  generic_core_antiunify.ml.dep  generic_core_antiunify.mli.dep  generic_core_consumer.ml.dep  generic_core_consumer.mli.dep  generic_core_desc.ml  generic_core_desc.ml.dep  generic_core_desc.mli  generic_core_desc.mli.dep  generic_core_desc_fun.ml  generic_core_desc_fun.ml.dep  generic_core_desc_fun.mli  generic_core_desc_fun.mli.dep  generic_core_equal.ml  generic_core_equal.ml.dep  generic_core_equal.mli  generic_core_equal.mli.dep  generic_core_extensible.ml  generic_core_extensible.ml.dep  generic_core_extensible.mli  generic_core_extensible.mli.dep  generic_core_patterns.ml.dep  generic_core_patterns.mli  generic_core_patterns.mli.dep  generic_core_product.ml  generic_core_product.ml.dep  generic_core_product.mli  generic_core_product.mli.dep  generic_core_repr.ml  generic_core_repr.ml.dep  (+98 more)
core/: antiunify.mli  consumer.ml  consumer.mli  desc.ml  desc_fun.ml  desc_fun.mli  jbuild  patterns.ml  product.ml  repr.mli  ty.mli  ty_desc.ml  ty_desc.mli
doc/: Generic.Antiunify.html  Generic.Consumer.html  Generic.Desc.html  Generic.Equal.html  Generic.Extensible.html  Generic.Fun.html  Generic.Gfun.html  Generic.Multiplate.html  Generic.Patterns.html  Generic.Product.html  Generic.Repr.html  Generic.SafeMarshal.html  Generic.Ty.html  Generic.Ty_desc.html  Generic.Uniplate.html  Generic.Util.html  (+260 more)
(+28 files in other folders)
